# candidate-agent

./: .env.example  .gitignore  LLD_POST_APPLY_ASSISTANT.md  README.md  main.py  pyproject.toml
docs/: FINAL_SUMMARY.md  INTEGRATION_SUCCESS.md  LLD_DOCUMENT_COMPARISON_REPORT.md  LLD_JIRA_DELIVERY_PLAN.md  LLD_PRODUCTION_REVISION_SUMMARY.md  LLD_PROTOTYPE_VALIDATION_APPENDIX.md  MOCK_DATA_AND_TEST_PROMPTS.md  OBSERVABILITY_BACKUP.md  OBSERVABILITY_ENHANCEMENT_GUIDE.md  OBSERVABILITY_FINAL_SUMMARY.md  PRODUCTION_ARCHITECTURE_GUIDE.md  PRODUCTION_GUARDRAILS_AND_FIXES.md  README_ENTERPRISE_PROTOTYPE.md  post-apply-assistant-lld-v01.md  post-apply-assistant-lld-v02.md  post-apply-assistant-lld-v1.md  post-apply-assistant-lld-v2.md  post-apply-assistant-lld.md
src/candidate_agent/: config.py  logging_setup.py  main.py
src/candidate_agent/agents/: graph.py  llm.py  prompts.py  state.py
src/candidate_agent/api/: dependencies.py  schemas.py
src/candidate_agent/api/routes/: agent.py  agent_v2.py  health.py
src/candidate_agent/mcp/: client.py
tests/: test_agent_invoke.py  test_v2_scenarios.py
